--- a/training.ipynb
+++ b/training.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T08:11:37.843180Z",
-     "start_time": "2025-06-05T08:11:35.286359Z"
+     "end_time": "2025-06-05T10:58:38.977818Z",
+     "start_time": "2025-06-05T10:58:36.985536Z"
     }
    },
    "cell_type": "code",
@@ -16,15 +16,15 @@
     "import torch\n",
     "import torch.onnx"
    ],
-   "id": "6be55e84bfa9497",
+   "id": "1c27703c12ca4f80",
    "outputs": [],
    "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T08:11:38.928250Z",
-     "start_time": "2025-06-05T08:11:38.902955Z"
+     "end_time": "2025-06-05T10:58:40.000243Z",
+     "start_time": "2025-06-05T10:58:39.979551Z"
     }
    },
    "cell_type": "code",
@@ -37,7 +37,7 @@
     "else:\n",
     "    print(\"CUDA is not available. Training will be performed on the CPU.\")"
    ],
-   "id": "223653cc21f3406c",
+   "id": "9e05ace579cb653b",
    "outputs": [
     {
      "name": "stdout",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T08:11:42.136578Z",
-     "start_time": "2025-06-05T08:11:42.133308Z"
+     "end_time": "2025-06-05T10:58:41.476122Z",
+     "start_time": "2025-06-05T10:58:41.471735Z"
     }
    },
    "cell_type": "code",
@@ -86,9 +86,12 @@
     "num_models = 5\n",
     "\n",
     "location_state = \"Simple RNN/trained_models/i7/it_1/state_models/model_\"\n",
-    "location_traced = \"Simple RNN/trained_models/i7/it_1/traced_models/model_\""
+    "location_traced = \"Simple RNN/trained_models/i7/it_1/traced_models/model_\"\n",
+    "\n",
+    "location_state_LSTM = \"LSTM/trained_models/i7/it_1/state_models/model_LSTM_\"\n",
+    "location_traced_LSTM = \"LSTM/trained_models/i7/it_1/traced_models/model_LSTM_\""
    ],
-   "id": "65139ecfaf0a1ccf",
+   "id": "195f2955b83482f3",
    "outputs": [],
    "execution_count": 3
   },
@@ -96,18 +99,17 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "RNN",
-   "id": "9df788d644e82f0b"
+   "id": "5a758621e131cc05"
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-06-05T08:11:44.576974Z"
-    }
+    "tags": [
+     "RNN training"
+    ]
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Initialize variables to track the best test/validation loss\n",
     "patience = 5\n",
@@ -237,30 +239,24 @@
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
     "        print(\"-----------------------------------------------------------------------------------\")"
    ],
-   "id": "420abcdd902a5bd7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------------------------------\n",
-      "Training has started for model 0\n"
-     ]
-    }
-   ],
-   "execution_count": null
+   "id": "cba7299d3753fdd1"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "LSTM",
-   "id": "e6fbfa718723a143"
+   "id": "ca1baacdd6bb5f1d"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-06-05T11:13:52.912913Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Initialize variables to track the best test/validation loss\n",
     "patience = 5\n",
@@ -350,7 +346,7 @@
     "                \"output_size\": output_size,\n",
     "                \"learning_rate\": learning_rate,\n",
     "                \"num_epochs\": num_epochs\n",
-    "            }, location_state + str(j) + \".pt\")\n",
+    "            }, location_state_LSTM + str(j) + \".pt\")\n",
     "\n",
     "            # Save traced model for MATLAB -> taken out\n",
     "            \"\"\"\n",
@@ -362,7 +358,7 @@
     "\n",
     "\n",
     "            # Export model to ONNX\n",
-    "            onnx_model_path = location_traced + str(j) + \"_traced.onnx\"\n",
+    "            onnx_model_path = location_traced_LSTM + str(j) + \"_traced.onnx\"\n",
     "\n",
     "            torch.onnx.export(\n",
     "                model,                     # PyTorch model\n",
@@ -390,7 +386,30 @@
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
     "        print(\"-----------------------------------------------------------------------------------\")"
    ],
-   "id": "2190f70a3329253e"
+   "id": "b9340f285099bb56",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------\n",
+      "Training has started for model 0\n",
+      "Model: 0, Epoch [1/30], Loss: 14.7596\n",
+      "Model: 0, Epoch [1/30], Test Loss: 6.6731\n",
+      "New best model found! Test Loss improved from inf to 6.6731\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "execution_count": null
   }
  ],
  "metadata": {
