--- a/training.ipynb
+++ b/training.ipynb
@@ -407,9 +407,313 @@
       "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [2/30], Loss: 3.7189\n",
+      "Model: 0, Epoch [2/30], Test Loss: 3.5021\n",
+      "New best model found! Test Loss improved from 6.6731 to 3.5021\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [3/30], Loss: 2.0570\n",
+      "Model: 0, Epoch [3/30], Test Loss: 2.1332\n",
+      "New best model found! Test Loss improved from 3.5021 to 2.1332\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all model_0 saved\n",
+      "Model: 0, Epoch [4/30], Loss: 1.2617\n",
+      "Model: 0, Epoch [4/30], Test Loss: 1.2712\n",
+      "New best model found! Test Loss improved from 2.1332 to 1.2712\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [5/30], Loss: 0.7557\n",
+      "Model: 0, Epoch [5/30], Test Loss: 0.7590\n",
+      "New best model found! Test Loss improved from 1.2712 to 0.7590\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all model_0 saved\n",
+      "Model: 0, Epoch [6/30], Loss: 0.4573\n",
+      "Model: 0, Epoch [6/30], Test Loss: 0.4628\n",
+      "New best model found! Test Loss improved from 0.7590 to 0.4628\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [7/30], Loss: 0.2722\n",
+      "Model: 0, Epoch [7/30], Test Loss: 0.2909\n",
+      "New best model found! Test Loss improved from 0.4628 to 0.2909\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [8/30], Loss: 0.1691\n",
+      "Model: 0, Epoch [8/30], Test Loss: 0.1848\n",
+      "New best model found! Test Loss improved from 0.2909 to 0.1848\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [9/30], Loss: 0.1127\n",
+      "Model: 0, Epoch [9/30], Test Loss: 0.1200\n",
+      "New best model found! Test Loss improved from 0.1848 to 0.1200\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [10/30], Loss: 0.0747\n",
+      "Model: 0, Epoch [10/30], Test Loss: 0.0936\n",
+      "New best model found! Test Loss improved from 0.1200 to 0.0936\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all model_0 saved\n",
+      "Model: 0, Epoch [11/30], Loss: 0.0501\n",
+      "Model: 0, Epoch [11/30], Test Loss: 0.0726\n",
+      "New best model found! Test Loss improved from 0.0936 to 0.0726\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all model_0 saved\n",
+      "Model: 0, Epoch [12/30], Loss: 0.0379\n",
+      "Model: 0, Epoch [12/30], Test Loss: 0.0731\n",
+      "Test loss has not improved; early stopping counter: 1\n",
+      "Model: 0, Epoch [13/30], Loss: 0.0268\n",
+      "Model: 0, Epoch [13/30], Test Loss: 0.0547\n",
+      "New best model found! Test Loss improved from 0.0726 to 0.0547\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [14/30], Loss: 0.0237\n",
+      "Model: 0, Epoch [14/30], Test Loss: 0.0462\n",
+      "New best model found! Test Loss improved from 0.0547 to 0.0462\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [15/30], Loss: 0.0192\n",
+      "Model: 0, Epoch [15/30], Test Loss: 0.0454\n",
+      "New best model found! Test Loss improved from 0.0462 to 0.0454\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [16/30], Loss: 0.0163\n",
+      "Model: 0, Epoch [16/30], Test Loss: 0.0523\n",
+      "Test loss has not improved; early stopping counter: 1\n",
+      "Model: 0, Epoch [17/30], Loss: 0.0148\n",
+      "Model: 0, Epoch [17/30], Test Loss: 0.0488\n",
+      "Test loss has not improved; early stopping counter: 2\n",
+      "Model: 0, Epoch [18/30], Loss: 0.0147\n",
+      "Model: 0, Epoch [18/30], Test Loss: 0.0416\n",
+      "New best model found! Test Loss improved from 0.0454 to 0.0416\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [19/30], Loss: 0.0135\n",
+      "Model: 0, Epoch [19/30], Test Loss: 0.0450\n",
+      "Test loss has not improved; early stopping counter: 1\n",
+      "Model: 0, Epoch [20/30], Loss: 0.0133\n",
+      "Model: 0, Epoch [20/30], Test Loss: 0.0427\n",
+      "Test loss has not improved; early stopping counter: 2\n",
+      "Model: 0, Epoch [21/30], Loss: 0.0095\n",
+      "Model: 0, Epoch [21/30], Test Loss: 0.0410\n",
+      "New best model found! Test Loss improved from 0.0416 to 0.0410\n",
+      "all model_0 saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4277: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with LSTM can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: 0, Epoch [22/30], Loss: 0.0122\n",
+      "Model: 0, Epoch [22/30], Test Loss: 0.0444\n",
+      "Test loss has not improved; early stopping counter: 1\n",
+      "Model: 0, Epoch [23/30], Loss: 0.0087\n",
+      "Model: 0, Epoch [23/30], Test Loss: 0.0463\n",
+      "Test loss has not improved; early stopping counter: 2\n",
+      "Model: 0, Epoch [24/30], Loss: 0.0066\n"
+     ]
     }
    ],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "i have developed a model with the first parameters -> the rest will come later",
+   "id": "5ac93f6d93ec81c"
   }
  ],
  "metadata": {
