--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,50 +1,77 @@
 {
  "cells": [
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "import torch\n",
-    "from classes import FullFileForTestings  # Import dataset class and model\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "from classes import SpeedEstimatorRNNModified"
-   ],
-   "id": "cd89150f1a3960e9"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "#Hyperparameters\n",
-    "input_size = 26  # Number of CAN signals per timestep\n",
-    "hidden_size = [256, 256, 512, 512, 512]\n",
-    "num_layers = [3, 4, 3, 4, 3]\n",
-    "output_size = 1"
-   ],
-   "id": "bb2730a34dc746a1"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-22T06:46:03.094042Z",
-     "start_time": "2025-05-22T06:45:50.655868Z"
+     "end_time": "2025-06-06T11:24:07.325776Z",
+     "start_time": "2025-06-06T11:24:00.406969Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "num_models = 4\n",
-    "num_test_data_path = [r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\auax_drv_noise_30.csv\", r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\buax_brk_noise_30.csv\",\n",
-    " r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\sin_steer_noise_30.csv\",\n",
-    "    r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\suay_mid_noise_30.csv\"]\n",
-    "test_data = [\"auax_drv\", \"buax_brk\", \"sin_steer\", \"suay_mid\"]\n",
-    "model_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_7\\model_\"\n",
+    "import torch\n",
+    "from tensorflow.python.ops.ragged.ragged_util import lengths_to_splits\n",
     "\n",
+    "from classes import FullFileForTestings  # Import dataset class and model\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from classes import SpeedEstimatorRNNModified, SpeedEstimatorLSTMModified\n",
+    "import numpy as np"
+   ],
+   "id": "cd89150f1a3960e9",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-06T11:24:07.539308Z",
+     "start_time": "2025-06-06T11:24:07.534296Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Hyperparameters\n",
+    "input_size = 20  # Number of CAN signals per timestep\n",
+    "hidden_size = [256]\n",
+    "num_layers = [3]\n",
+    "output_size = 2"
+   ],
+   "id": "bb2730a34dc746a1",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-06T11:24:07.570409Z",
+     "start_time": "2025-06-06T11:24:07.565297Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "num_models = 1\n",
+    "num_test_data_path = [\"data/i7/it_1/3_validation/i7_8.csv\", \"data/i7/it_1/3_validation/i7_16.csv\",\n",
+    " \"data/i7/it_1/3_validation/i7_31.csv\", \"data/i7/it_1/3_validation/i7_37.csv\", \"data/i7/it_1/3_validation/i7_43.csv\", \"data/i7/it_1/3_validation/i7_49.csv\"]\n",
+    "test_data = [\"suay_steer_ON\", \"suay_steer_OFF\", \"auax_drv_OFF\", \"buax_brk_ON\", \"buax_brk_OFF\", \"sin_steer_ON\"]\n",
+    "model_location = \"LSTM/trained_models/i7/it_1/state_models/model_LSTM_\"\n",
+    "\n",
+    "plot_location = \"LSTM/trained_models/i7/it_1/validation_plots/model_LSTM_\""
+   ],
+   "id": "91ba8e38b6ccd8b1",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-06T11:25:10.879408Z",
+     "start_time": "2025-06-06T11:24:59.006087Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "for i in range(num_models):\n",
     "    # Set paths and parameters for testing\n",
     "    model_path = model_location + str(i) + '.pt'  # Replace with the path to your saved model\n",
@@ -61,59 +88,84 @@
     "        features = features.to(device)\n",
     "\n",
     "        # Define and load the model\n",
-    "        model = SpeedEstimatorRNNModified(input_size, hidden_size[i], num_layers[i], output_size)  # Instantiate your RNN model\n",
+    "        model = SpeedEstimatorLSTMModified(input_size, hidden_size[i], num_layers[i], output_size)  # Instantiate your LSTM model\n",
     "        checkpoint = torch.load(model_path, map_location=device)\n",
     "\n",
     "        model.load_state_dict(checkpoint['model_state_dict'])  # Load the trained weights\n",
     "        model = model.to(device)  # Move model to the appropriate device\n",
-    "        model.eval()  # Set model to evaluation mode\n",
+    "        model.eval()  # Set model to evaluation model\n",
     "\n",
     "        # Inference\n",
     "        with torch.no_grad():\n",
     "            predictions = model(features)\n",
     "            predicted_speeds = predictions.cpu().numpy().flatten()\n",
     "\n",
+    "        length = len(predicted_speeds)/2\n",
+    "        u = [0]*int(length)\n",
+    "        v = [0]*int(length)\n",
+    "\n",
+    "        for k in range(len(predicted_speeds)):\n",
+    "            if k % 2 == 0:\n",
+    "                u[int(k/2)] = predicted_speeds[k]\n",
+    "            else:\n",
+    "                v[int((k-1)/2)] = predicted_speeds[k]\n",
+    "\n",
+    "        # longitudinal plots\n",
     "        plt.figure(figsize=(10, 6))\n",
-    "        plt.plot(actual_speeds.numpy(), label=\"Actual Speeds\")\n",
-    "        plt.plot(predicted_speeds, label=\"Predicted Speeds\", linestyle=\"dashed\")\n",
+    "        plt.plot(actual_speeds[:, 0], label=\"Actual Speed\")\n",
+    "        plt.plot(u, label=\"Estimated Speed\", linestyle=\"dashed\")\n",
     "        plt.legend()\n",
-    "        plt.title(\"Comparison of Actual vs. Predicted Vehicle Speeds (\" + test_data[j] + \")\")\n",
+    "        plt.title(\"Comparison of Actual vs. Predicted Longitudinal Speed (\" + test_data[j] + \")\")\n",
     "        plt.xlabel(\"Time Step [s]\")\n",
     "        plt.ylabel(\"Speed [m/s]\")\n",
     "        plt.grid()\n",
-    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
+    "        plt.savefig(plot_location + str(i) + \"/u/model_LSTM_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_u.png\", dpi=300,)\n",
     "        plt.close()\n",
     "\n",
     "        plt.figure(figsize=(10, 6))\n",
-    "        plt.plot(actual_speeds.numpy()-predicted_speeds, label=\"Difference\")\n",
+    "        plt.plot(actual_speeds[:, 0].numpy() - u, label=\"Difference\")\n",
     "        plt.legend()\n",
-    "        plt.title(\"Difference of Actual vs. Predicted Vehicle Speeds (\" + test_data[j] + \")\")\n",
+    "        plt.title(\"Difference of Actual vs. Predicted Longitudinal Speed (\" + test_data[j] + \")\")\n",
     "        plt.xlabel(\"Time Step [s]\")\n",
     "        plt.ylabel(\"Speed difference [m/s]\")\n",
     "        plt.grid()\n",
-    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n",
+    "        plt.savefig(plot_location + str(i) + \"/u/model_LSTM_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_u_diff.png\", dpi=300)\n",
     "        plt.close()\n",
     "\n",
-    "\n"
+    "        # lateral plots\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.plot(actual_speeds[:, 1], label=\"Actual Speed\")\n",
+    "        plt.plot(v, label=\"Estimated Speed\", linestyle=\"dashed\")\n",
+    "        plt.legend()\n",
+    "        plt.title(\"Comparison of Actual vs. Predicted Lateral Speed (\" + test_data[j] + \")\")\n",
+    "        plt.xlabel(\"Time Step [s]\")\n",
+    "        plt.ylabel(\"Speed [m/s]\")\n",
+    "        plt.grid()\n",
+    "        plt.savefig(plot_location + str(i) + \"/v/model_LSTM_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_v.png\", dpi=300,)\n",
+    "        plt.close()\n",
+    "\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.plot(actual_speeds[:, 1].numpy() - v, label=\"Difference\")\n",
+    "        plt.legend()\n",
+    "        plt.title(\"Difference of Actual vs. Predicted Lateral Speed (\" + test_data[j] + \")\")\n",
+    "        plt.xlabel(\"Time Step [s]\")\n",
+    "        plt.ylabel(\"Speed difference [m/s]\")\n",
+    "        plt.grid()\n",
+    "        plt.savefig(plot_location + str(i) + \"/v/model_LSTM_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_v_diff.png\", dpi=300)\n",
+    "        plt.close()"
    ],
    "id": "6f9a52a21169108c",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:44: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "<>:54: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "<>:44: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "<>:54: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_3052\\938855127.py:44: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
-      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_3052\\938855127.py:54: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n"
-     ]
-    }
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "------------------------------------------------------------------------------------------------\n",
+    "debugging"
    ],
-   "execution_count": 6
+   "id": "c3a4d4604c0bae3"
   }
  ],
  "metadata": {
