--- a/pt_to_onnx_converter.ipynb
+++ b/pt_to_onnx_converter.ipynb
@@ -133,8 +133,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T08:01:57.634530Z",
-     "start_time": "2025-06-02T08:01:57.500482Z"
+     "end_time": "2025-06-05T14:35:41.395451Z",
+     "start_time": "2025-06-05T14:35:41.151535Z"
     }
    },
    "cell_type": "code",
@@ -147,24 +147,18 @@
    "id": "2c8b36b63644c911",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Serving 'Simple RNN/trained_models/converted_models/for_matlab/model_0_7.onnx' at http://localhost:8080\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'netron'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mModuleNotFoundError\u001B[39m                       Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnetron\u001B[39;00m\n\u001B[32m      3\u001B[39m onnx_file_path = \u001B[33m\"\u001B[39m\u001B[33mSimple RNN/trained_models/converted_models/for_matlab/it_7/model_0_7.onnx\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m      4\u001B[39m netron.start(onnx_file_path)\n",
+      "\u001B[31mModuleNotFoundError\u001B[39m: No module named 'netron'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('localhost', 8080)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   }
  ],
  "metadata": {
