--- a/training.ipynb
+++ b/training.ipynb
@@ -3,15 +3,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T08:42:05.834745Z",
-     "start_time": "2025-06-11T08:41:59.051325Z"
+     "end_time": "2025-07-03T14:27:03.079403Z",
+     "start_time": "2025-07-03T14:26:42.995002Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from classes import SpeedEstimatorRNN, VehicleSpeedDataset, SpeedEstimatorLSTM\n",
+    "from classes import SpeedEstimatorRNN, VehicleSpeedDataset, SpeedEstimatorLSTM, SpeedEstimatorGRU\n",
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "import torch.onnx"
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T08:42:06.511044Z",
-     "start_time": "2025-06-11T08:42:06.342104Z"
+     "end_time": "2025-07-03T14:27:45.645145Z",
+     "start_time": "2025-07-03T14:27:44.331933Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T08:44:08.319382Z",
-     "start_time": "2025-06-11T08:44:08.314956Z"
+     "end_time": "2025-07-03T14:27:48.951939Z",
+     "start_time": "2025-07-03T14:27:48.947978Z"
     }
    },
    "cell_type": "code",
@@ -89,11 +89,14 @@
     "location_traced = \"Simple RNN/trained_models/i7/it_1/traced_models/model_\"\n",
     "\n",
     "location_state_LSTM = \"LSTM/trained_models/i7/it_1/state_models/model_LSTM_\"\n",
-    "location_traced_LSTM = \"LSTM/trained_models/i7/it_1/traced_models/model_LSTM_\""
+    "location_traced_LSTM = \"LSTM/trained_models/i7/it_1/traced_models/model_LSTM_\"\n",
+    "\n",
+    "location_state_GRU = \"GRU/trained_models/i7/it_1/state_models/model_GRU_\"\n",
+    "location_traced_GRU = \"GRU/trained_models/i7/it_1/traced_models/model_GRU_\""
    ],
    "id": "195f2955b83482f3",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -121,7 +124,7 @@
     "    best_test_loss = float('inf')\n",
     "\n",
     "    print(\"-------------------------------------\")\n",
-    "    print(f\"Training has started for model {j}\")\n",
+    "    print(f\"Training has started for simple RNN model {j}\")\n",
     "\n",
     "    # Load dataset and DataLoader\n",
     "    train_dataset = VehicleSpeedDataset(training_data_path, extension, seq_length = sequence_length[j], step_size = step_size)\n",
@@ -261,7 +264,7 @@
     "    best_test_loss = float('inf')\n",
     "\n",
     "    print(\"-------------------------------------\")\n",
-    "    print(f\"Training has started for model {j}\")\n",
+    "    print(f\"Training has started for LSTM model {j}\")\n",
     "\n",
     "    # Load dataset and DataLoader\n",
     "    train_dataset = VehicleSpeedDataset(training_data_path, extension, seq_length = sequence_length[j], step_size = step_size)\n",
@@ -390,10 +393,15 @@
    "id": "bb20a94cc3d4ddda"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-07-03T14:27:58.126646Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Initialize variables to track the best test/validation loss\n",
     "patience = 5\n",
@@ -405,7 +413,7 @@
     "    best_test_loss = float('inf')\n",
     "\n",
     "    print(\"-------------------------------------\")\n",
-    "    print(f\"Training has started for model {j}\")\n",
+    "    print(f\"Training has started for GRU model {j}\")\n",
     "\n",
     "    # Load dataset and DataLoader\n",
     "    train_dataset = VehicleSpeedDataset(training_data_path, extension, seq_length = sequence_length[j], step_size = step_size)\n",
@@ -418,7 +426,7 @@
     "\n",
     "    # Initialize model, loss function, and optimizer\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    model = SpeedEstimatorLSTM(input_size, hidden_size[j], num_layers[j], output_size).to(device)\n",
+    "    model = SpeedEstimatorGRU(input_size, hidden_size[j], num_layers[j], output_size).to(device)\n",
     "    criterion = nn.MSELoss()\n",
     "    optimizer = optim.Adam(model.parameters(), lr=learning_rate[j])\n",
     "\n",
@@ -483,7 +491,7 @@
     "                \"output_size\": output_size,\n",
     "                \"learning_rate\": learning_rate,\n",
     "                \"num_epochs\": num_epochs\n",
-    "            }, location_state_LSTM + str(j) + \".pt\")\n",
+    "            }, location_state_GRU + str(j) + \".pt\")\n",
     "\n",
     "            # Save traced model for MATLAB -> taken out\n",
     "            \"\"\"\n",
@@ -495,7 +503,7 @@
     "\n",
     "\n",
     "            # Export model to ONNX\n",
-    "            onnx_model_path = location_traced_LSTM + str(j) + \"_traced.onnx\"\n",
+    "            onnx_model_path = location_traced_GRU + str(j) + \"_traced.onnx\"\n",
     "\n",
     "            torch.onnx.export(\n",
     "                model,                     # PyTorch model\n",
@@ -523,7 +531,18 @@
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
     "        print(\"-----------------------------------------------------------------------------------\")"
    ],
-   "id": "6b6e5e3893cf6dd3"
+   "id": "6b6e5e3893cf6dd3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------\n",
+      "Training has started for GRU model 1\n"
+     ]
+    }
+   ],
+   "execution_count": null
   }
  ],
  "metadata": {
